crates/gdsr_core/src/cell/snapshots/gdsr_core__cell__tests__cell_get_elements-2.snap
---
source: crates/gdsr_core/src/cell/mod.rs
expression: moved_elements
---
[
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
        },
    ),
    Path(
        Path {
            points: [
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
            type: None,
            width: None,
        },
    ),
    Text(
        Text {
            text: "text",
            origin: Point {
                x: Integer {
                    value: 5,
                    units: 1e-9,
                },
                y: Integer {
                    value: 5,
                    units: 1e-9,
                },
            },
            layer: 1,
            magnification: 1.0,
            angle: 0.0,
            x_reflection: false,
            vertical_presentation: Middle,
            horizontal_presentation: Centre,
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 5,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
        },
    ),
    Polygon(
        Polygon {
            points: [
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 25,
                        units: 1e-9,
                    },
                },
                Point {
                    x: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                    y: Integer {
                        value: 15,
                        units: 1e-9,
                    },
                },
            ],
            layer: 1,
            data_type: 0,
        },
    ),
]
